--- a/style.css
+++ b/style.css
@@ -2,22 +2,34 @@
       text-decoration: none;
       color: inherit;
  }
-
-body {
-    background: #07BEB8;
+ 
+ body {
+    background: yellow;
 }
 
+.brambles {
+    background: url("teal brambles pink background.jpg");
+    background-position: 33% 90%;
+    background-repeat: no-repeat;
+    }
+    
 .title {
-  font-weight:normal;
+  font-weight: normal;
   font-family:Arial;
   font-size: 10vw;
+  writing-mode: vertical-rl;
+  text-orientation: upright;
   text-indent: 1vw;
-  background-color: #3DCCC7;
-  color: #9CEAEF;
+  color: transparent;
   border: none;
-  margin: auto;
+  margin-left: -700px;
+  margin-top: 70px;
   padding: 0px;
   width:80%;
+  height: 290%;
+  animation: glow 5s infinite;
+ mix-blend-mode:  normal
+ background-clip: text;
 }
 
 .frontpageabout {
@@ -31,7 +43,23 @@ body {
   margin: auto;
   padding: 0px;
   width:80%;
-  margin-top: -75px;
+  margin-top: -2340px;
+  margin-right: 50px;
+}
+
+.frontpageabout:hover {
+  text-indent: 50px;
+  transition: text-indent 1s;
+}
+
+.frontpageabout:hover::before {
+  display: inline-block;
+  content: "🫀";
+}
+
+.frontpageabout:hover::after {
+  display: inline-block;
+  content: "🫀";
 }
 
 .aboutheader {
@@ -44,7 +72,27 @@ body {
   border: none;
   margin: auto;
   padding: 0px;
-  width:80%
+  width:80%;
+  animation: glow 3s infinite;
+}
+
+@keyframes glow {
+  0% {
+    text-shadow:  0 0 10px white;
+  }
+  
+  15% {
+    text-shadow: 2px 2px 10px rgba(255, 255, 255, 1),
+                 -2px -2px 10px rgba(255, 255, 255, 1);
+  }
+  30% {
+    text-shadow: 2px 2px 4px rgba(255, 255, 255, .7),
+                 -2px -2px 4px rgba(255, 255, 255, .7);
+  }
+  50% {
+    text-shadow: 20px 20px 50px rgba(255, 255, 255, .5),
+                 -20px -20px 50px rgba(255, 255, 255, .5);
+  }
 }
 
 .textforabout {
@@ -52,12 +100,12 @@ body {
   font-family:Arial;
   font-size: 2.5vw;
   word-break: break-word;
-  text-indent: 1vw;
+  text-indent: 0vw;
   background-color: #68D8D6;
   color: #C4FFF9;
   border: none;
   margin: auto;
-  padding: .1px;
+  padding-left: 10px;
   width:80%;
   margin-top: -75px;
 }
@@ -72,7 +120,23 @@ body {
   border: none;
   margin: auto;
   padding: 0px;
-  width:80%
+  width:80%;
+  margin-right: 50px;
+}
+
+.frontpagefiction:hover {
+  text-indent: 50px;
+  transition: text-indent 1s;
+}
+
+.frontpagefiction:hover::before {
+  display: inline-block;
+  content: "📖";
+}
+
+.frontpagefiction:hover::after {
+  display: inline-block;
+  content: "📖";
 }
 
 .fictionheader {
@@ -86,6 +150,7 @@ body {
   margin: auto;
   padding: 0px;
   width:80%;
+  animation: glow 3s infinite;
 }
 
 .textforfiction {
