Deleted .less for clutter.

--- a/deeengan.css
+++ b/deeengan.css
@@ -3,7 +3,7 @@
 <--- -------------------------- -*/
 /* BODY RELATED STUFF */
 body {
-  background: #FFFF00;
+  background: #fbf4e1;
 }
 body {
   margin: 0;
